modified: index.html, style.css; links and bio

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 			<div id="left-side" class="col-md-5">
 				<h1>Dylan<br>Clarry</h1>
 				<h2>Student and Web Developer</h2>
-				<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying computer science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>.</p>
+				<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying computer science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. I have a passion for developing websites and software and I'm always learning something new. Feel free to <a href="mailto:dylan.imail@gmail.com" target="_blank">get in touch</a>.</p>
 				<button onclick="window.location.href='DylanClarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></p></button>
 				<!-- social-media -->
 				<ul id="social-media">
 					<li><a href="https://www.facebook.com/dc1324" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 					<li><a href="https://github.com/Dylan-Clarry" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/dylan-c-42768210b/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-					<li><a href="mailto:dylan.imail@gmail.com" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+					<li><a href="mailto:dylan.imail@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 				</ul><!-- /social-media -->
 
 			</div><!-- /left-side -->
