--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<title>Dylan Clarry - Student and Web Developer</title>
 
 	<!-- links -->
+	<link rel="shortcut icon" type="image/png" href="favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro:400,700,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
