--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 	<meta name="description" content="Dylan Clarry, self-taught web developer and student at Wilfrid Laurier University">
 	<meta name="keywords" content="DylanClarry, Dylan, Clarry, Student, webdev, Web, Developer">
+	<meta property="og:site_name" content="Dylan Clarry" />
+	<meta property="og:title" content="Dylan Clarry" />
+	<meta property="og:description" content="Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at Wilfrid Laurier University." />
+	<meta property="og:url" content="http://www.dylanclarry.ca/" />
 
 	<!-- title -->
 	<title>Dylan Clarry - Student and Web Developer</title>
@@ -26,14 +30,14 @@
 			<div id="left-side" class="col-md-5">
 				<h1>Dylan<br>Clarry</h1>
 				<h2>Student and Web Developer</h2>
-				<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying computer science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. I have a passion for developing websites and software and I'm always learning something new. Feel free to <a href="mailto:dylan.imail@gmail.com" target="_blank">get in touch</a>.</p>
-				<button onclick="window.location.href='DylanClarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></p></button>
+				<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
+				<button onclick="window.location.href='dylanclarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></p></button>
 				<!-- social-media -->
 				<ul id="social-media">
 					<li><a href="https://www.facebook.com/dc1324" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 					<li><a href="https://github.com/Dylan-Clarry" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/dylan-c-42768210b/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-					<li><a href="mailto:dylan.imail@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+					<li><a href="mailto:dylan@dylanclarry.ca" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 				</ul><!-- /social-media -->
 
 			</div><!-- /left-side -->
