--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h1>Dylan<br>Clarry</h1>
 				<h2>Student and Web Developer</h2>
 				<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
-				<button onclick="window.location.href='dylanclarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></p></button>
+				<button onclick="window.location.href='DylanClarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></p></button>
 				<!-- social-media -->
 				<ul id="social-media">
 					<li><a href="https://www.facebook.com/dc1324" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
