fixed resume link error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 			<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
 
-			<button onclick="window.location.href='dylanclarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume</p><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+			<button onclick="window.location.href='DylanClarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume</p><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 
 			<!-- social-media -->
 			<ul id="social-media">
