updated grid; new resume; new section 'Great RGB Colour Game'

--- a/index.html
+++ b/index.html
@@ -22,28 +22,33 @@
 </head>
 <body>
 
+
 	<!-- grid -->
 	<div class="grid">
-
 		<!-- left-side -->
 		<div class="grid-left-side left-side">
 
-			<h1>Dylan<br>Clarry</h1>
-			<h2>Student and Web Developer</h2>
+			<div class="container">
+				<h1>Dylan<br>Clarry</h1>
+				<h2>Student and Web Developer</h2>
 
-			<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
+				<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
 
-			<button onclick="window.location.href='DylanClarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume</p><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+				<button onclick="window.location.href='dylanclarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume</p><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 
-			<!-- social-media -->
-			<ul id="social-media">
-				<li><a href="https://www.facebook.com/dc1324" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li><a href="https://github.com/Dylan-Clarry" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-				<li><a href="https://www.linkedin.com/in/dylan-c-42768210b/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-				<li><a href="mailto:dylan@dylanclarry.ca" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-			</ul><!-- /social-media -->
+				<!-- social-media -->
+				<ul id="social-media">
+					<li><a href="https://www.facebook.com/dc1324" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="https://github.com/Dylan-Clarry" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/dylan-c-42768210b/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+					<li><a href="mailto:dylan@dylanclarry.ca" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+				</ul><!-- /social-media -->
+				
+			</div>
+
 
 		</div><!-- /left-side -->
+
 
 		<!-- right-side -->
 		<div class="grid-right-side right-side">
@@ -51,13 +56,24 @@
 			<!-- au -->
 			<div class="content-container au">
 
-				<img src="img/au/au-site.png">
+				<img src="img/au/bradleyau.png">
 
 				<h3>Bradley Au <a href="https://dylan-clarry.github.io/bradleyau.com/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a><a href="https://github.com/Dylan-Clarry/bradleyau.com" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h3>
 				<p>Personal Website</p>
 				<p>HTML | CSS | Bootstrap | JS/JQuery | Chart.js</p>
 
 			</div><!-- /au -->
+
+			<!-- cg -->
+			<div class="content-container cg">
+
+				<img src="img/cg/cgg.png">
+
+				<h3>Great RGB Colour Game <a href="https://dylan-clarry.github.io/colourgame/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a><a href="https://github.com/Dylan-Clarry/colourgame" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h3>
+				<p>Javascript game</p>
+				<p>HTML | CSS | JavaScript </p>
+
+			</div><!-- /cg -->
 
 			<!-- footer -->
 			<div class="footer">
