google web masters meta link added to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta property="og:site_name" content="Dylan Clarry" />
 	<meta property="og:title" content="Dylan Clarry" />
 	<meta property="og:description" content="Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at Wilfrid Laurier University." />
-	<meta property="og:url" content="http://www.dylanclarry.ca/" />
+	<meta name="google-site-verification" content="UWbnqBoR9vg00Hk7ED8JURCOQDHzERj_N4z6opfls_8" />	
 
 	<!-- title -->
 	<title>Dylan Clarry - Student and Web Developer</title>
