--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115076664-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-115076664-1');
+	</script>
 	<!-- meta -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
@@ -10,10 +19,8 @@
 	<meta property="og:title" content="Dylan Clarry" />
 	<meta property="og:description" content="Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at Wilfrid Laurier University." />
 	<meta name="google-site-verification" content="UWbnqBoR9vg00Hk7ED8JURCOQDHzERj_N4z6opfls_8" />	
-
 	<!-- title -->
 	<title>Dylan Clarry - Student and Web Developer</title>
-
 	<!-- links -->
 	<link rel="shortcut icon" type="image/png" href="favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro:400,700,900" rel="stylesheet">
