ipad fix; updated bio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
 				<h1>Dylan<br>Clarry</h1>
 				<h2>Student and Web Developer</h2>
 
-				<p id="bio">Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>. Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
+				<div id="bio">
+					<p>Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>.</p>
+
+					<p>I have experience building websites with both front-end and back-end technologies. When I'm not in class I'm usually learning something new or working on projects. I am currently seeking work opportunities to utilize my programming and web development skills.</p>
+
+					<p>Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
+				</div><!-- /bio -->
+
 
 				<button onclick="window.location.href='DylanClarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume</p><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 
@@ -96,9 +103,7 @@
 			</div><!-- /footer -->
 
 		</div><!-- /right-side -->
-		
 	</div><!-- /grid -->
-
 
 </body>
 </html>
