--- a/index.html
+++ b/index.html
@@ -7,103 +7,42 @@
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
-
 	  gtag('config', 'UA-115076664-1');
 	</script>
 	<!-- meta -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-	<meta name="description" content="Dylan Clarry, self-taught web developer and student at Wilfrid Laurier University">
+	<meta name="description" content="Dylan Clarry, web developer and student at Wilfrid Laurier University">
 	<meta name="keywords" content="DylanClarry, Dylan, Clarry, Student, webdev, Web, Developer">
 	<meta property="og:site_name" content="Dylan Clarry" />
 	<meta property="og:title" content="Dylan Clarry" />
-	<meta property="og:description" content="Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at Wilfrid Laurier University." />
+	<meta property="og:description" content="Hi! I'm Dylan. I'm a web developer based in Waterloo Ontario. I'm currently studying Computer Science at Wilfrid Laurier University." />
 	<meta name="google-site-verification" content="UWbnqBoR9vg00Hk7ED8JURCOQDHzERj_N4z6opfls_8" />	
 	<!-- title -->
 	<title>Dylan Clarry - Student and Web Developer</title>
 	<!-- links -->
 	<link rel="shortcut icon" type="image/png" href="favicon.ico" />
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro:400,700,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+	<div class="container">
+		<div class="about">
+			<img src="img/noodles.png">
+			<p>Hi! I'm Dylan. I'm a web developer based in Waterloo Ontario. I love programming, web design, and making ramen.</p>
+			<br>
+			<p>I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank"><u>Wilfrid Laurier University</u></a>. I have experience building websites with front-end technologies and building iOS apps. When I'm not in class I'm either working on my side projects or making some delicious ramen. I am currently seeking work opportunities to utilize my web development skills.<br>Feel free to <a href="mailto:dylan@dylanclarry.com"><u>get in touch</u></a>.</p>
+		</div><!-- /about -->
 
-
-	<!-- grid -->
-	<div class="grid">
-		<!-- left-side -->
-		<div class="grid-left-side left-side">
-
-			<div class="container">
-				<h1>Dylan<br>Clarry</h1>
-				<h2>Student and Web Developer</h2>
-
-				<div id="bio">
-					<p>Hi! I'm Dylan. I'm a self taught web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank">Wilfrid Laurier University</a>.</p>
-
-					<p>I have experience building websites with both front-end and back-end technologies. When I'm not in class I'm usually learning something new or working on projects. I am currently seeking work opportunities to utilize my programming and web development skills.</p>
-
-					<p>Feel free to <a href="mailto:dylan@dylanclarry.ca" target="_blank">get in touch with me</a>.</p>
-				</div><!-- /bio -->
-
-
-				<button onclick="window.location.href='DylanClarry.pdf'" type="button" class="resume-btn btn btn-info"><p>View Resume</p><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-
-				<!-- social-media -->
-				<ul id="social-media">
-					<li><a href="https://www.facebook.com/dc1324" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="https://github.com/Dylan-Clarry" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/dylan-c-42768210b/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-					<li><a href="mailto:dylan@dylanclarry.ca" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-				</ul><!-- /social-media -->
-				
-			</div>
-
-
-		</div><!-- /left-side -->
-
-
-		<!-- right-side -->
-		<div class="grid-right-side right-side">
-
-			<!-- au -->
-			<div class="content-container au">
-
-				<img src="img/au/bradleyau.png">
-
-				<h3>Bradley Au <a href="https://dylan-clarry.github.io/bradleyau.com/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a><a href="https://github.com/Dylan-Clarry/bradleyau.com" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h3>
-				<p>Personal Website</p>
-				<p>HTML | CSS | Bootstrap | JS/JQuery | Chart.js</p>
-
-			</div><!-- /au -->
-
-			<!-- cg -->
-			<div class="content-container cg">
-
-				<img src="img/cg/cgg.png">
-
-				<h3>Great RGB Colour Game <a href="https://dylan-clarry.github.io/colourgame/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a><a href="https://github.com/Dylan-Clarry/colourgame" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h3>
-				<p>Javascript game</p>
-				<p>HTML | CSS | JavaScript </p>
-
-			</div><!-- /cg -->
-
-			<!-- footer -->
-			<div class="footer">
-				<div>
-					<!-- social-media -->
-					<ul>
-						<li><a href="https://www.facebook.com/dc1324" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="https://github.com/Dylan-Clarry" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/dylan-c-42768210b/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-						<li><a href="mailto:dylan.imail@gmail.com" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-					</ul><!-- /social-media -->
-				</div>
-			</div><!-- /footer -->
-
-		</div><!-- /right-side -->
-	</div><!-- /grid -->
-
+		<footer>
+			<ul>
+				<li><a href="https://github.com/Dylan-Clarry" target="_blank">Github</a></li>
+				<li><a href="https://www.linkedin.com/in/dylanclarry" target="_blank">Linkedin</a></li>
+				<li><a href="https://www.facebook.com/dc1324" target="_blank">Facebook</a></li>
+				<li><a class="resume" onclick="window.location.href='dylanclarry.pdf'">Resume</a></li>
+			</ul>
+		</footer>
+	</div><!-- /container -->
 </body>
 </html>
