updated blurb... again

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 	<div class="container">
 		<div class="about">
 			<img src="img/noodles.png">
-			<p>Hi! I'm Dylan. I'm a web developer based in Waterloo Ontario. I love building cool things and making ramen.</p>
+			<p>Hi! I'm Dylan. I'm a web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank"><u>Wilfrid Laurier University</u></a>.</p>
 			<br>
-			<p>I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank"><u>Wilfrid Laurier University</u></a>. I have experience building websites with front-end technologies and building iOS apps. When I'm not in class I'm either working on my side projects or making some ramen. I am currently seeking work opportunities to utilize my web development skills.<br>Feel free to <a href="mailto:dylan@dylanclarry.com"><u>get in touch</u></a>.</p>
+			<p>I have experience building websites with front-end technologies and building iOS apps. I'm passionate about my side projects and making ramen from scratch. I am currently seeking work opportunities to utilize my web development skills.<br>Feel free to <a href="mailto:dylan@dylanclarry.com"><u>get in touch</u></a>.</p>
 		</div><!-- /about -->
 
 		<footer>
