Created portfolio section of site

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<img src="img/noodles.png">
 			<p>Hi! I'm Dylan. I'm a web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank"><u>Wilfrid Laurier University</u></a>.</p>
 			<br>
-			<p>I have experience building websites with front-end technologies and building iOS apps. I'm passionate about my side projects and making ramen from scratch. I am currently seeking work opportunities to utilize my web development skills.<br>Feel free to <a href="mailto:dylan@dylanclarry.com"><u>get in touch</u></a>.</p>
+			<p>I have experience building websites with front-end technologies and building iOS apps. I'm passionate about my side projects and I love to make ramen from scratch. I am currently seeking work opportunities to utilize my web development skills.<br>Feel free to <a href="mailto:dylan@dylanclarry.com"><u>get in touch</u></a>.</p>
 		</div><!-- /about -->
 
 		<footer>
@@ -41,6 +41,7 @@
 				<li><a href="https://www.linkedin.com/in/dylanclarry" target="_blank">Linkedin</a></li>
 				<li><a href="https://www.facebook.com/dc1324" target="_blank">Facebook</a></li>
 				<li><a class="resume" onclick="window.location.href='dylanclarry.pdf'">Resume</a></li>
+				<li class="push-right"><a href="./portfolio.html"><strong>Portfolio</strong></a></li>
 			</ul>
 		</footer>
 	</div><!-- /container -->
