temp solution to new modals; new models

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<li><a href="https://www.linkedin.com/in/dylanclarry" target="_blank">Linkedin</a></li>
 				<li><a href="https://www.facebook.com/dc1324" target="_blank">Facebook</a></li>
 				<li><a class="resume" onclick="window.location.href='dylanclarry.pdf'">Resume</a></li>
-				<li class="push-right"><a href="./portfolio.html"><strong>Portfolio</strong></a></li>
+				<li class="push-right"><a href="./portfolio.html">Portfolio</a></li>
 			</ul>
 		</footer>
 	</div><!-- /container -->
