--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
 	<div class="container">
 		<div class="about">
 			<img src="img/noodles.png">
-			<p>Hi! I'm Dylan. I'm a web developer based in Waterloo Ontario. I'm currently studying Computer Science at <a href="https://www.wlu.ca/" target="_blank"><u>Wilfrid Laurier University</u></a>.</p>
+			<p>Hi! I'm Dylan. I'm a freelance web developer based in Markham Ontario. I help clients build fast, responsive, mobile friendly websites to establish an online presence.</p>
 			<br>
-			<p>I have experience building websites with front-end technologies and building iOS apps. I'm passionate about my side projects and I love to make ramen from scratch. I am currently seeking work opportunities to utilize my web development skills.<br>Feel free to <a href="mailto:dylan@dylanclarry.com"><u>get in touch</u></a>.</p>
+			<p>I have experience creating websites with front-end technologies and building RESTful API's. You can check out some of my work <a href="./portfolio.html"><u>here</u></a>.</p>
+			<br>
+			<p>Have a project in mind? say <a href="mailto:hi@dylanclarry.com"><u>hi@dylanclarry.ca</u></a>.</p>
 		</div><!-- /about -->
 
 		<footer>
 			<ul>
 				<li><a href="https://github.com/Dylan-Clarry" target="_blank">Github</a></li>
 				<li><a href="https://www.linkedin.com/in/dylanclarry" target="_blank">Linkedin</a></li>
-				<li><a href="https://www.facebook.com/dc1324" target="_blank">Facebook</a></li>
 				<li><a class="resume" onclick="window.location.href='dylanclarry.pdf'">Resume</a></li>
-				<li class="push-right"><a href="./portfolio.html">Portfolio</a></li>
+				<li class="push-right"><a href="./portfolio.html">Portfolio -></a></li>
 			</ul>
 		</footer>
 	</div><!-- /container -->
