tryna fix image issues

--- a/maclaughlin-grain.html
+++ b/maclaughlin-grain.html
@@ -68,13 +68,13 @@
 					<p>Built as a single page app, the website is made to feel snappy and instantaneous to get an app-like feel and responsiveness.</p>
 				</div><!-- /block -->
 				<div class="block grid-img-full">
-					<img class="img-border" src="./img/mg/shop.png" alt="mg_shop">
+					<img class="img-border" src="./img/mg/Shop.png" alt="mg_shop">
 				</div><!-- /block -->
 				<div class="block grid-img-full">
-					<img class="img-border" src="./img/mg/about.png" alt="mg_about">
+					<img class="img-border" src="./img/mg/About.png" alt="mg_about">
 				</div><!-- /block -->
 				<div class="block grid-img-full">
-					<img class="img-border" src="./img/mg/contact.png" alt="mg_contact">
+					<img class="img-border" src="./img/mg/Contact.png" alt="mg_contact">
 				</div><!-- /block -->
 			</section>
 
