--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<img src="img/noodles.png">
 			<p>Hi! I'm Dylan. I'm a freelance web developer based in Markham Ontario. I help clients build fast, responsive, mobile friendly websites to establish an online presence.</p>
 			<br>
-			<p>I have experience creating websites with front-end technologies and building RESTful API's. You can check out some of my work <a href="./portfolio.html"><u>here</u></a>.</p>
+			<p>I have experience creating websites with front-end technologies and building REST API's. You can check out some of my work <a href="./portfolio.html"><u>here</u></a>.</p>
 			<br>
 			<p>Have a project in mind? say <a href="mailto:hi@dylanclarry.com"><u>hi@dylanclarry.ca</u></a>.</p>
 		</div><!-- /about -->
