--- a/index.html
+++ b/index.html
@@ -18,31 +18,32 @@
 	<meta property="og:title" content="Dylan Clarry" />
 	<meta property="og:description" content="Hi! I'm Dylan. I'm a web developer based in Waterloo Ontario. I'm currently studying Computer Science at Wilfrid Laurier University." />
 	<meta name="google-site-verification" content="UWbnqBoR9vg00Hk7ED8JURCOQDHzERj_N4z6opfls_8" />	
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="-1">
 	<!-- title -->
 	<title>Dylan Clarry - Student and Web Developer</title>
 	<!-- links -->
 	<link rel="shortcut icon" type="image/png" href="favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
 	<div class="container">
 		<div class="about">
 			<img src="img/noodles.png">
-			<p>Hi! I'm Dylan. I'm a freelance web developer based in Markham Ontario. I help clients build fast, responsive, mobile friendly websites to establish an online presence.</p>
+            <p>Hi! I'm Dylan and I'm a Web Developer from Toronto. I'm passionate about building web apps and contributing to open source projects.</p>
 			<br>
-			<p>I have experience creating websites with front-end technologies and building REST API's. You can check out some of my work <a href="./portfolio.html"><u>here</u></a>.</p>
+            <p>Right now I'm working on an app called 🚀<a href="https://github.com/Dylan-Clarry/markdown-srs" target="_blank"><u>Rocket SRS</u></a>, which is a <a href="https://en.wikipedia.org/wiki/Spaced_repetition" target="_blank"><u>spaced repetition system</u></a> that uses Markdown to create and review flashcards.</p>
 			<br>
-			<p>Have a project in mind? say <a href="mailto:hi@dylanclarry.com"><u>hi@dylanclarry.ca</u></a>.</p>
+			<p>Want to get in touch? Say <a href="mailto:hi@dylanclarry.com"><u>hi@dylanclarry.ca</u></a>.</p>
 		</div><!-- /about -->
 
 		<footer>
 			<ul>
 				<li><a href="https://github.com/Dylan-Clarry" target="_blank">Github</a></li>
 				<li><a href="https://www.linkedin.com/in/dylanclarry" target="_blank">Linkedin</a></li>
-				<li><a class="resume" onclick="window.location.href='dylanclarry.pdf'">Resume</a></li>
-				<li class="push-right"><a href="./portfolio.html">Portfolio -></a></li>
 			</ul>
 		</footer>
 	</div><!-- /container -->
